2008-02-08  Kenichi Handa  <handa@ni.aist.go.jp>

	* international/fontset.el (setup-default-fontset): Fix arabic otf
	font specification.

2008-02-08  Daiki Ueno  <ueno@unixuser.org>

	* epa-dired.el:
	* epa-file.el:
	* epa-mail.el:
	* epa-setup.el:
	* epa.el:
	* epg-config.el:
	* epg-package-info.el:
	* epg.el: Initial check-in of EasyPG.

2008-02-08  Glenn Morris  <rgm@gnu.org>

	* custom.el (custom-theme-set-variables): Sort symbols that are
	dependencies before symbols that depend on them.
	(custom-enabled-themes): Set after custom-theme-directory.

	* pcmpl-unix.el (top-level): Move provide statement to end.
	(pcmpl-unix-group-file, pcmpl-unix-passwd-file): Remove leading
	`*' from doc-string.  Allow to be nil.
	(pcmpl-ssh-known-hosts-file): Convert comment into expanded doc-string.
	Allow to be nil.  Add :version.
	(pcmpl-ssh-hosts): Move definition before use.  Handle lines
	without hostnames, and multiple hostnames per line.

	* term/x-win.el (x-handle-parent-id): Remove free variable `parent-id'.

2008-02-08  Phil Hagelberg <phil@evri.com>

	* pcmpl-unix.el (pcmpl-ssh-known-hosts-file): New defcustom.
	(pcomplete/ssh, pcomplete/scp, pcmpl-ssh-hosts): New functions.

2008-02-07  Timo Savola  <timo.savola@iki.fi>

	* startup.el (command-line-x-option-alist): Add --parent-id.

	* term/x-win.el (x-handle-parent-id): New function.

2008-02-07  Chris Moore  <christopher.ian.moore@gmail.com>

	* mouse.el (x-fixed-font-alist): Use consistent capitalization for
	"Font Menu".

2008-02-06  Michael Albinus  <michael.albinus@gmx.de>

	* net/dbus.el (dbus-interface-peer): New defconst.
	(dbus-ping): New defun.

2008-02-06  Sam Steingold  <sds@gnu.org>

	* vc-hooks.el (vc-prefix-key): New user-customizable variable.

2008-02-06  Stefan Monnier  <monnier@iro.umontreal.ca>

	* net/ange-ftp.el (ange-ftp-unhandled-file-name-directory):
	Just return nil and let the C code provide a fallback.

2008-02-05  Glenn Morris  <rgm@gnu.org>
